LIN-3899/LIN-3907 Fix scrollbar on required input with empty label
(cherry picked from commit 399c7b3db8e4885256fee56d24ba13aa2140e4c2)

--- a/vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-form-item.css
+++ b/vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-form-item.css
@@ -31,7 +31,14 @@
 /************************************************ 
  * REQUIRED INDICATOR
  ************************************************/
- 
+
+[part="required-indicator"] {
+    /*
+     * Ensure that the required indicator is visible even if the label is empty/ blank.
+     * Without setting this min-height a scrollbar on the whole row appears.
+     */
+    min-height: 1em;
+}
 [part="required-indicator"]::after {
     position: absolute;
     height: 0;
